// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordField component snap test Render PasswordField with label, should matching snapshot 1`] = `
<div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-label"
    >
      <label
        class="ant-form-item-no-colon"
        title="Username"
      >
        Username
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <input
            action="click"
            class="ant-input ant-input-password"
            name="username"
            placeholder="username"
            type="password"
            value=""
          />
        </div>
      </div>
      <div
        class="ant-form-item-explain"
      >
        <div
          role="alert"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PasswordField component snap test Render PasswordField, should matching snapshot 1`] = `
<div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-control"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <input
            action="click"
            class="ant-input ant-input-password"
            name="test"
            placeholder=""
            type="password"
            value=""
          />
        </div>
      </div>
      <div
        class="ant-form-item-explain"
      >
        <div
          role="alert"
        />
      </div>
    </div>
  </div>
</div>
`;
